Bug 742155 - There can be both 'Copy to' and 'Move to' actions in a filter. Do not assume only one of them exists when renaming folders. r=mbanner